<resources>
    <string name="app_name">House Manager</string>
    <string name="logo_description">Application Logo</string>
    <string name="oppure">Oppure</string>
    <string name="registrati">Registrati</string>
    <string name="accedi">Accedi</string>
    <string name="registrazione">Registrazione</string>
    <string name="server_client_id">157998387277-g8hh6e6p897ovgqqc59upe0fdsf7q9l6.apps.googleusercontent.com</string>

    <string name="welcome_title">Benvenuto in</string>
    <string name="welcome_message">Se non si è in possesso di un account ci si può registrare, oppure si può accedere con il proprio account Google.</string>
    <string name="chiudi">Chiudi</string>
    <string name="errore_login_google">Si è verificato un errore nell\'accesso con Google.</string>
    <string name="errore_credenziali_google">Errore nell\'accesso. Credenziali errate.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="conferma_password">Conferma password</string>
    <string name="password_corrente">Password corrente</string>
    <string name="nuova_password">Nuova password</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="e_mail">E-mail</string>
    <string name="sono_un">Sono un:</string>
    <string name="proprietario_locatario">Proprietario (Locatore)</string>
    <string name="affittuario_coinquilino">Affittuario (Coinquilino)</string>

    <string name="sommario">Sommario</string>
    <string name="spese_condominio">Spese condominio</string>
    <string name="affitto">Affitto</string>
    <string name="bollette">Bollette</string>

    <string name="titolotorneo">Titolo</string>
    <string name="datatorneo">Data</string>
    <string name="oratorneo">Ora</string>
    <string name="indirizzotorneo">Indirizzo</string>
    <string name="descrizione">Descrizione</string>
    <string name="categoriatorneo">Categoria</string>
    <string name="crea">Crea</string>
    <string name="Partecipa">Partecipa</string>
    <string name="storicotorneo">Storico</string>
    <string name="partecipatorneo">Partecipa</string>
    <string name="creatorneo">Crea</string>
    <string name="crea_casa">Crea casa</string>
    <string name="creazione_casa">Creazione casa</string>


    <string name="profilo">Profilo</string>
    <string name="logout">Log-Out</string>
    <string name="modifica_password">Modifica password:</string>
    <string name="modifica">Modifica</string>
    <string name="hello_blank_fragment">prova</string>
    <string name="title_activity_maps">Map</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="homepage">Homepage</string>
    <string name="statistiche">Statistiche</string>
    <string name="tornei">Tornei</string>
    <string name="codice_condiviso">Ecco il tuo codice, pronto per essere condiviso</string>
    <string name="codice">Codice</string>
    <string name="nome_spesa">Nome spesa</string>
    <string name="importo_spesa">Importo</string>
    <string name="inserisci">Inserisci</string>
    <string name="spesacomune">Spesa comune</string>
    <string name="categoriabolletta">"Categoria "</string>
    <string name="datascadenza">Data scadenza</string>
    <string name="regolamento">Regolamento</string>
    <string name="codice_casa">Codice casa</string>
    <string name="inserisci_codice_casa">Inserisci codice casa:</string>
    <string name="inserisci_codice">Inserisci codice</string>
    <string name="entra_in_una_casa">Entra in una casa</string>
    <string name="inserisci_nome_della_casa">Inserisci nome</string>
    <string name="caricamento">Caricamento...</string>
    <string name="home">Home</string>
    <string name="spese">Spese</string>
    <string name="inserisci_indirizzo_della_casa">Inserisci indirizzo</string>
    <string name="gestisciSpesaComune">Gestisci spesa comune</string>
    <string name="inserisci_spesa_condominio">Inserisci spesa condominio</string>
    <string name="inserisci_bollette">Inserisci bollette</string>
    <string name="inserisci_affitto">Inserisci affitto</string>
    <string name="listacase">"Lista "</string>
    <string name="statistiche_tutte_case">Tutte le case</string>
    <string name="statistiche_sola_casa">Singola casa</string>
    <string name="pagate">Spese pagate</string>
    <string name="non_pagate">Spese non pagate</string>
    <string name="data_della_spesa">Data della spesa</string>
    <string name="numero_di_mensilit">Numero di mensilità</string>
    <string name="importo_mensile">Importo mensile</string>
    <string name="titoloAffitto">Titolo</string>
    <string name="full_name">Full name</string>
    <string name="fullname_email_com">fullname@email.com</string>
    <string name="cancella_account">Cancella account</string>
    <string name="label_nome">Nome:</string>
    <string name="label_cognome">Cognome:</string>
    <string name="label_email">Email:</string>
    <string name="spese_pagate">Spese pagate</string>
    <string name="spese_non_pagate">Spese non pagate</string>
    <string name="casa">Casa</string>
    <string name="inserisci_spese_condominio">Inserisci spese condominio</string>
    <string name="partecipa">Partecipa</string>
    <string name="storico">Storico</string>
    <string name="regolamento_">Regolamento:</string>

    <string name="codice_casa2">Codice casa</string>
    <string name="paga">Paga</string>
    <string name="nome_spesa_">Nome spesa:</string>
    <string name="descrizione_">Descrizione:</string>
    <string name="tipo_">Tipo spesa:</string>
    <string name="prezzo_">Prezzo:</string>
    <string name="data_inserimento_">Data inserimento:</string>
    <string name="data_pagamento_">Data pagamento:</string>
    <string name="l_importo_dell_affitto_riferito_al_singolo_affittuario">L\'importo dell\'affitto è riferito al singolo affittuario.</string>
    <string name="l_importo_della_bolletta_verr_diviso_tra_gli_affittuari">L\'importo della bolletta verrà diviso tra gli affittuari.</string>
    <string name="l_importo_della_spesa_verr_diviso_tra_i_coinquilini">L\'importo della spesa verrà diviso tra i coinquilini.</string>
    <string name="l_importo_della_spesa_condominale_riferito_al_singolo_affittuario">L\'importo della spesa condominale è riferito al singolo affittuario.</string>
    <string name="richiesta_partecipazione">Non hai partecipato ancora a nessun torneo.</string>
    <string name="sommario_spese">Sommario spese</string>
    <string name="nessuna_spesa_presente">Non è presente nessuna spesa.</string>
    <string name="categoria_spesa">Categoria:</string>
    <string name="data_scadenza">Data scadenza:</string>
    <string name="titolo_spesa">Titolo :</string>
    <string name="affittuario_">Affittuario:</string>
    <string name="nessun_torneo">Non esiste ancora nessun torneo.</string>
    <string name="condividi">Condividi</string>
    <string name="inserisci_comune">Inserisci spesa comune</string>


</resources>
