<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.spese.proprietario.InserimentoSpeseProprietarioFragment"
    android:theme="@style/Theme.App.Fullscreen"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        style="@style/Theme.App.TabLayout"
        android:id="@+id/intablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/intabspesecondomio"
            android:text="@string/spese_condominio"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/intabbollette"
            android:text="@string/bollette"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/intabaffitto"
            android:text="@string/affitto"/>


    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/inviewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>